force-app/main/default/objects/PopcornStep__c/PopcornStep__c.object-meta.xml
<CustomObject>
    <label>Popcorn Step</label>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Popcorn Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>