force-app/main/default/objects/PopcornStep__c/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <label>Keyword</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Given</fullName>
            </value>
            <value>
                <fullName>When</fullName>
            </value>
            <value>
                <fullName>And</fullName>
            </value>
            <value>
                <fullName>Then</fullName>
            </value>
            <value>
                <fullName>But</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>