force-app/main/default/objects/PopcornStep__c/fields/MatchLocation__c.field-meta.xml
<CustomField>
    <fullName>MatchLocation__c</fullName>
    <label>Match Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>